added nav on html

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
   </head>
 
   <body>
-    <h1>midterm</h1>
+    <div class="hero">
+      <img class="logo" src="logo.png"/>
+      <nav class="nav">
+        <ul>
+          <li>NEXT EVENT</li>
+          <li>SIGN UP</li>
+          <li>OUR VENDORS</li>
+          <li>ABOUT</li>
+        </ul>
+        <img class="search" src="searach.png"/>
+      </nav>
+    </div>
   </body>
 </html>
