--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="hero">
-      <img class="logo" src="logo.png"/>
+      <img class="logo" src="src/images/logo.png"/>
       <nav class="nav">
         <ul>
           <li>NEXT EVENT</li>
@@ -16,7 +16,7 @@
           <li>OUR VENDORS</li>
           <li>ABOUT</li>
         </ul>
-        <img class="search" src="searach.png"/>
+        <img class="search" src="src/images/search.png"/>
       </nav>
     </div>
   </body>
