add change on css

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
   </head>
 
   <body>
-    <div class="hero">
-      <img class="logo" src="src/images/logo.png"/>
       <nav class="nav">
+      <img class="logo" src="src/images/logo.png"/>
         <ul>
           <li>NEXT EVENT</li>
           <li>SIGN UP</li>
@@ -18,6 +17,25 @@
         </ul>
         <img class="search" src="src/images/search.png"/>
       </nav>
+    <div class="article">
+      <img class="icons" src="src/images/icons.png"/>
+      <img class="featured" src="src/images/featured.png"/>
+      <button type="button" name="button">CHECK THIS EVENT >>></button>
+      <img class="video" src="src/images/video.png"/>
+      <img class="vendor" src="src/images/vendor.png"/>
+    </div>
+    <div class="instagram">
+      <h1>@hnlnightmarket</h1>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <img class="insta" src="src/images/insta.png"/>
+      <button class="insta-button" type="button" name="button">MORE INSTAGRAM</button>
+
     </div>
   </body>
 </html>
