add change on css

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
     <div class="article">
       <img class="icons" src="src/images/icons.png"/>
       <img class="featured" src="src/images/featured.png"/>
-      <button type="button" name="button">CHECK THIS EVENT >>></button>
+      <button class="event-button" type="button" name="button">CHECK THIS EVENT >>></button>
       <img class="video" src="src/images/video.png"/>
       <img class="vendor" src="src/images/vendor.png"/>
+      <button class="vendor-button" type="button" name="button">CHECK THIS VENDOR >>></button>
     </div>
     <div class="instagram">
       <h1>@hnlnightmarket</h1>
@@ -35,7 +36,14 @@
       <img class="insta" src="src/images/insta.png"/>
       <img class="insta" src="src/images/insta.png"/>
       <button class="insta-button" type="button" name="button">MORE INSTAGRAM</button>
-
+    </div>
+    <div class="footer">
+      <h2>NEWSLETTER</h2>
+      <button class="signup"type="button" name="button">SIGN UP</button>
+      <ul>
+        <li>LOCATION <small>685 Auahi St.</small></li>
+        <li>CONTACT <small>info@strrtgrindz.com</small></li>
+      </ul>
     </div>
   </body>
 </html>
