fixed search icon

--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,24 @@
   </head>
 
   <body>
-      <nav class="nav">
-      <img class="logo" src="src/images/logo.png"/>
-        <ul>
-          <li>NEXT EVENT</li>
-          <li>SIGN UP</li>
-          <li>OUR VENDORS</li>
-          <li>ABOUT</li>
-        </ul>
-        <img class="search" src="src/images/search.png"/>
-      </nav>
+      <header>
+        <img class="logo" src="src/images/logo.png"/>
+        <div class="nav">
+          <ul>
+            <li>NEXT EVENT</li>
+            <li>SIGN UP</li>
+            <li>OUR VENDORS</li>
+            <li>ABOUT</li>
+          </ul>
+          <img class="search" src="src/images/search.png"/>
+        </div>
+      </header>
     <div class="article">
       <img class="icons" src="src/images/icons.png"/>
+      <div class="container">
       <img class="featured" src="src/images/featured.png"/>
       <button class="event-button" type="button" name="button">CHECK THIS EVENT >>></button>
+      </div>
       <img class="video" src="src/images/video.png"/>
       <img class="vendor" src="src/images/vendor.png"/>
       <button class="vendor-button" type="button" name="button">CHECK THIS VENDOR >>></button>
