--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,15 @@
       </header>
     <div class="article">
       <img class="icons" src="src/images/icons.png"/>
-      <div class="container">
+      <div class="container1">
       <img class="featured" src="src/images/featured.png"/>
       <button class="event-button" type="button" name="button">CHECK THIS EVENT >>></button>
       </div>
+      <div class="container2">
       <img class="video" src="src/images/video.png"/>
       <img class="vendor" src="src/images/vendor.png"/>
       <button class="vendor-button" type="button" name="button">CHECK THIS VENDOR >>></button>
+      </div>
     </div>
     <div class="instagram">
       <h1>@hnlnightmarket</h1>
