add changes on buttons

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,11 @@
       <button class="insta-button" type="button" name="button">MORE INSTAGRAM</button>
     </div>
     <div class="footer">
-      <h2>NEWSLETTER</h2>
-      <button class="signup"type="button" name="button">SIGN UP</button>
+      <div class="newsletter">
+        <h2>NEWSLETTER</h2>
+        <input type="text" name="name" id="name" placeholder="Your Email" required/>
+        <button class="signup"type="button" name="button">SIGN UP</button>
+      </div>
       <ul>
         <li>LOCATION <small>685 Auahi St.</small></li>
         <li>CONTACT <small>info@strrtgrindz.com</small></li>
