add change on css

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
         <img class="logo" src="src/images/logo.png"/>
         <div class="nav">
           <ul>
-            <li>NEXT EVENT</li>
-            <li>SIGN UP</li>
-            <li>OUR VENDORS</li>
-            <li>ABOUT</li>
+            <li><a href="#">NEXT EVENT</a></li>
+            <li><a href="#">SIGN UP</a></li>
+            <li><a href="#">OUR VENDORS</a></li>
+            <li><a href="#">ABOUT</a></li>
           </ul>
           <img class="search" src="src/images/search.png"/>
         </div>
