--- a/event/index.html
+++ b/event/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>KCC NMA ART258 Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>KCC NMA ART258 Project/event</title>
+    <link rel="stylesheet" href="event/style.css">
   </head>
 
   <body>
@@ -11,7 +11,7 @@
         <img class="logo" src="src/images/logo.png"/>
         <div class="nav">
           <ul>
-            <li><a href="src/event">NEXT EVENT</a></li>
+            <li><a href="#">NEXT EVENT</a></li>
             <li><a href="#">SIGN UP</a></li>
             <li><a href="#">OUR VENDORS</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -21,14 +21,10 @@
       </header>
     <div class="article">
       <img class="icons" src="src/images/icons.png"/>
-      <div class="container1">
-      <img class="featured" src="src/images/featured.png"/>
-      <button class="event-button" type="button" name="button">CHECK THIS EVENT >>></button>
-      </div>
+      <img class="featured" src="src/images/flyer.png"/>
       <div class="container2">
       <img class="video" src="src/images/video.png"/>
       <img class="vendor" src="src/images/vendor.png"/>
-      <button class="vendor-button" type="button" name="button">CHECK THIS VENDOR >>></button>
       </div>
     </div>
     <div class="instagram">
